# mechanistic-interpretability-projects

./: README.md  bracket-closing.ipynb  pyproject.toml  requirements.txt
playground/: pos-embed-svd.ipynb  token-embed-dim.ipynb
